重构: 统一业务注册与分层快照